--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,11 @@ header #item1-2 {
 .weather {
     display: flex;
     flex-direction: row;
-    margin: -1.75rem;
+}
+.weather i {
+    padding: .5rem;
+    font-size: 2em;
+    color: var(--white);
 }
 .meteo-elem {
     margin: auto;
@@ -257,11 +261,10 @@ footer h4 {
 .video-wrapper {
     position: relative;
     width: 100vw;
-    height: 45vh;
+    height: 195px;
     overflow: hidden;
     box-shadow: var(--shadow);
     padding: 0.5rem;
-    background-color: var(--white);
 }
 .video-wrapper iframe {
     position: absolute;
@@ -270,4 +273,35 @@ footer h4 {
     width: 100%;
     height: 400%;
     pointer-events: none;
+}
+.informations {
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.informations ul {
+    list-style: none;
+}
+.informations .card {
+    border-radius: 10px;
+    box-shadow: var(--shadow);
+    background-color: var(--white);
+    padding: 3rem;
+}
+.informations .card .content {
+    width: 30vw;
+    min-width: 250px;
+}
+.informations .card .content h1 {
+    box-shadow: 2px 4px 1px #e06a0959;
+    background-color: #f9f9f9;
+    border-radius: 30%;
+    padding: .5rem;
+    text-align: center;
+    font-size: 1.5em;
+}
+.informations .card .content ul {
+    margin-top: 2rem;
+    padding-inline-start: 3rem;
 }
